{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 33,
  "lineage": "4b30b26c-5618-b496-f458-aee4cbfc2bc5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "private_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.42.42",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-28T14:09:20.891-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip2",
            "name": "private-server-ip2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers2",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/myserver2"
            ]
          },
          "dependencies": [
            "google_compute_network.main_network2",
            "google_compute_subnetwork.main_subnetwork2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "public_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.159.238.149",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-28T13:35:52.801-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/public-server-ip2",
            "name": "public-server-ip2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/public-server-ip2",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/myserver2"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2021-11-28T14:28:05.462-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chmurki-329715/global/firewalls/my-firewall-rules2",
            "log_config": [],
            "name": "my-firewall-rules2",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main2",
            "priority": 1000,
            "project": "chmurki-329715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/firewalls/my-firewall-rules2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_network2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "main_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20211105",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/disks/myserver2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/chmurki-329715/zones/europe-west3-a/instances/myserver2",
            "instance_id": "2360047621408440475",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "kKLTxWmh2hI=",
            "name": "myserver2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.238.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main2",
                "network_ip": "10.0.42.42",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers2",
                "subnetwork_project": "chmurki-329715"
              }
            ],
            "project": "chmurki-329715",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/myserver2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "PhZSlEh1qrg=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_address.public_ip2",
            "google_compute_network.main_network2",
            "google_compute_subnetwork.main_subnetwork2",
            "google_compute_address.private_ip2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/chmurki-329715/global/networks/main2",
            "mtu": 0,
            "name": "main2",
            "project": "chmurki-329715",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main_subnetwork2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-28T14:08:58.292-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/chmurki-329715/regions/europe-west3/subnetworks/servers2",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "servers2",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "chmurki-329715",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main_network2"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules2",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "allow-ssh-ingress2",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-28T14:19:50.491-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chmurki-329715/global/firewalls/allow-ssh-ingress2",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "allow-ssh-ingress2",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/main2",
            "priority": 1000,
            "project": "chmurki-329715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/firewalls/allow-ssh-ingress2",
            "source_ranges": [
              "79.110.199.238"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_network2"
          ]
        }
      ]
    }
  ]
}